--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "gl-spikes",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "spikes.js",
   "directories": {
     "example": "example"
   },
   "dependencies": {
-    "gl-axes": "~3.0.0",
+    "gl-axes": "^3.0.0",
+    "gl-buffer": "^2.0.8",
+    "gl-vao": "^1.1.3",
+    "glslify": "^1.4.0"
+  },
+  "devDependencies": {
+    "gl-state": "^1.0.0",
+    "gl-matrix": "^2.1.0",
     "beefy": "~1.1.0",
     "game-shell-orbit-camera": "~0.0.0",
-    "gl-matrix": "~2.1.0",
-    "gl-buffer": "~2.0.8",
-    "gl-now": "~1.3.1",
-    "gl-vao": "~1.1.3",
-    "gl-state": "~1.0.0",
-    "glslify": "~1.4.0"
+    "gl-now": "~1.3.1"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
