--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gl-spikes",
-  "version": "2.0.1",
+  "name": "gl-spikes3d",
+  "version": "1.0.0",
   "description": "",
   "main": "spikes.js",
   "directories": {
