--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "glslify": "^6.1.0"
   },
   "devDependencies": {
-    "beefy": "~1.1.0",
+    "beefy": "^2.1.8",
     "game-shell-orbit-camera": "~0.0.0",
     "gl-axes3d": "^1.2.6",
     "gl-matrix": "^2.1.0",
