--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "glslify": "^6.1.0"
   },
   "devDependencies": {
-    "beefy": "~1.1.0",
+    "beefy": "^2.1.8",
+    "chttps": "^1.0.6",
     "game-shell-orbit-camera": "~0.0.0",
-    "gl-axes3d": "^1.2.6",
+    "gl-axes3d": "^1.4.2",
     "gl-matrix": "^2.1.0",
     "gl-now": "~1.3.1",
-    "gl-state": "^1.0.0"
+    "gl-state": "^1.0.0",
+    "mime": "^1.4.1"
   },
   "scripts": {
+    "postshrinkwrap": "chttps .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserify": {
